--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,10 +15,12 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v4
+    - name: Get short SHA
+      run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
     - name: publish to docker hub
       uses: docker/build-push-action@v1
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
         repository: vilkaspilka5/goapp
-        tags: latest, ${{ github.run_number }}
+        tags: latest, ${SHORT_SHA}
