--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,10 +15,13 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v4
-    - name: publish to docker hub
-      uses: docker/build-push-action@v6
+    - name: Log in to registry
+      uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
         repository: vilkaspilka5/goapp
+    - name: publish to docker hub
+      uses: docker/build-push-action@v6
+      with:
         tags: latest, ${{ github.run_number }}
