--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-        repository: vilkaspilka5/goapp
+        registry: vilkaspilka5/goapp
     - name: publish to docker hub
       uses: docker/build-push-action@v6
       with:
