--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,8 +20,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_TOKEN }}
-        registry: vilkaspilka5/goapp
     - name: publish to docker hub
       uses: docker/build-push-action@v6
       with:
-        tags: latest, ${{ github.run_number }}
+        tags: vilkaspilka5/goapp:latest, vilkaspilka5/goapp:${{ github.run_number }}
