--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
     - name: checkout code
       uses: actions/checkout@v4
+    - name: Get short SHA for tag
+      id: sha
+      run: echo "short_sha=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
     - name: Log in to registry
       uses: docker/login-action@v3
       with:
@@ -23,4 +26,6 @@ jobs:
     - name: publish to docker hub
       uses: docker/build-push-action@v6
       with:
-        tags: vilkaspilka5/goapp:latest, vilkaspilka5/goapp:${{ github.run_number }}
+        tags: |
+          vilkaspilka5/goapp:latest
+          vilkaspilka5/goapp:${{ steps.sha.outputs.short_sha }}
