--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
     - name: publish to docker hub
       uses: docker/build-push-action@v6
       with:
-        push: false
+        push: true
         tags: |
           vilkaspilka5/goapp:latest
           vilkaspilka5/goapp:${{ steps.sha.outputs.short_sha }}
@@ -46,12 +46,7 @@ jobs:
 
       - name: Update image tag in overlay
         run: |
-          pwd
-          ls
-          echo "go to deployment"
           cd deployment
-          pwd
-          ls
           # edit tag in manifest
           sed -i "s/\(vilkaspilka5\/goapp\):.*/\1:${{ needs.build.outputs.new_tag }}/" deployment.yaml
 
